# nvsonic-head-tracker

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  cmake.yml
head-tracker-arduino/: head-tracker-arduino.ino  mpu.h
head-tracker-arduino-source/: inv_mpu.cpp
head-tracker-osc-bridge/: Head Tracker OSC Bridge.jucer
head-tracker-osc-bridge/JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
head-tracker-osc-bridge/Resources/: presets.xml
head-tracker-osc-bridge/Source/: BinauralHeadView.cpp  BinauralHeadView.h  Bridge.cpp  Bridge.h  Main.cpp  MainComponent.cpp  MainComponent.h  SMLookAndFeel.h
resources/: presets.xml
source/: BinauralHeadView.cpp  BinauralHeadView.h  Bridge.cpp  Bridge.h  Main.cpp  MainComponent.cpp  MainComponent.h  SMLookAndFeel.h  WavefrontObjParser.h  rs232-linux.c
